# Computer-Vision-Projects

./: README.md
Btech-Project/: README.md
Btech-Project/Project/: pyproject.toml  run.sh  run2.sh  run3.sh  run3_lp.sh  run4.sh  run4_lp.sh
Btech-Project/Project/results_unrolled/models/: best_unrolled_standard_steps12_beta0.9_lr0.0003_bs16.pth  best_unrolled_standard_steps16_beta0.9_lr0.0003_bs16.pth  best_unrolled_vortex_steps12_beta0.9_lr0.0003_bs16.pth  best_unrolled_vortex_steps16_beta0.9_lr0.0003_bs16.pth
Btech-Project/Project/src/: afno.py  compat.py  debug_train_transformer.ipynb  models.ipynb  new_attention.py  prepare_dataset_flickr.ipynb  test.ipynb  test.py  train.py  train_copy.py  train_unrolled.py  transformer.ipynb  transformer.py  unet.ipynb  unet.py  unrolled_hio.py
Btech-Project/Project/src/.ipynb_checkpoints/: afno-checkpoint.ipynb  create_dataset-checkpoint.ipynb  new_attention-checkpoint.ipynb  train-checkpoint.ipynb
Btech-Project/Project/src/phase_retrieval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Btech-Project/Project/src_1/: afno.py  train.py
